feat(aliyunAi): 新增文生图功能及重构扩图相关代码
- 新增Text2ImageRequest请求模型和CreatText2ImageTaskResponse响应模型
- 重构扩图相关模型类名并移除transient修饰符
- 重命名AliYunAiApi为AliYunApi并新增文生图接口
- 在PictureAIServiceController中新增文生图相关接口
- 优化PictureAiServiceImpl服务实现